--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 	<div class="btn-border btn-round btn-red btn6">
 		<button class="btn btn-red"><p><a href=" https://lc0435.github.io/ninth-job/" target="_blank">第9次作业</a></p></button>
 	</div>
+	<div class="btn-border btn-round btn-red btn6">
+		<button class="btn btn-red"><p><a href="https://lc0435.github.io/ten-job/" target="_blank">第10次作业</a></p></button>
+	</div>
 	
 </div>
 
